# slimpris2

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  slimpris2.spec
doc/: Makefile.am  slimpris2.conf.md  slimpris2.md  slimpris2.service.md
src/: .editorconfig  .gitattributes  80-slimpris2.preset  Makefile.am  io.github.mavit.slimpris2.desktop  io.github.mavit.slimpris2.metainfo.xml  org.mpris.MediaPlayer2.slimpris2.service.in  slimpris2.conf  slimpris2.desktop  slimpris2.in  slimpris2.py.in  slimpris2.service.in
src/icons/: Makefile.am
src/icons/22x22/: Makefile.am
src/icons/512x512/: Makefile.am
src/icons/scalable/: Makefile.am
src/icons/symbolic/: Makefile.am
